not serving static files

--- a/templates/webmaster.html
+++ b/templates/webmaster.html
@@ -31,6 +31,7 @@
                     <a href="/admin/django_logtail/log/" class="btn btn-primary">Log Files</a>
                     <a href="/test_email/" class="btn btn-primary">Send test emails</a>
                     <a href="/test_sms/" class="btn btn-primary">Send test sms</a>
+                    <a href="/sync_twilio_numbers/" class="btn btn-primary">Sync Twilio Numbers</a>
                     <hr />
                     <h5>Starting Celery Manually</h5>
                     <code>
