this was the code when something started sending endless sms'

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -7,7 +7,7 @@
     {#    <link href="{{ STATIC_URL }}css/calendar.css" rel="stylesheet">#}
     <link href="{{ STATIC_URL }}js/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/calendar.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/clockin.css" rel="stylesheet"/>
+        <link href="{{ STATIC_URL }}css/jquery-clockpicker.min.css" rel="stylesheet">
 
     <script src="{{ STATIC_URL }}js/moment-timezone.min.js"></script>
 
@@ -156,7 +156,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/modal.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="{{ STATIC_URL }}js/clockin.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-clockpicker.min.js"></script>
     <script src="{{ STATIC_URL }}js/booking_template.js"></script>
     <script src="{{ STATIC_URL }}js/tuning_updates.js"></script>
 
