replaced clock and few fixes.  styling calendar for iphone.

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -14,9 +14,7 @@
 
 
     <style>
-        .fc-header-title h2 {
-            font-size: 90%;
-        }
+
 
         #booking_edit {
             color: white;
@@ -32,6 +30,18 @@
 
         .fc-agenda-slots td div {
             height: 25px !important;
+        }
+
+        /* date heading on calendar */
+        .fc-header-title h2  {
+            font-size: 13px !important;
+            padding: 0px 2px;
+        }
+
+        /* left right arrows top left and calendar view selection top right */
+        .fc-button {
+            padding-right: 0.3em;
+            padding-left: 0.3em;
         }
         .client_select {
             margin-bottom:5px;
@@ -50,6 +60,9 @@
 
         }
 
+        #booking_edit {
+            text-align: center;
+        }
         .alert {
             padding: 5px;
             margin-bottom: 5px;
