--- a/templates/web/booking_editable_template_booker.html
+++ b/templates/web/booking_editable_template_booker.html
@@ -36,7 +36,8 @@
             {{ default_studio }}</a>
 
         for session beginning at
-        {% if object.status < '2' %}
+      <input id="input_deadline_time" value="" data-pk="{{ object.ref }}" type="hidden">
+      {% if object.status < '2' %}
             <a href="#" id="field_deadline_time" class="editable when_time"
                data-pk="{{ object.ref }}"
                data-date="{{ object.deadline|date:"Y-m-d" }}"
@@ -55,7 +56,8 @@
 
 
         to start
-        <a href="#" id="field_requested_time" class="editable when_time"
+     <input id="input_requested_time" value="" data-pk="{{ object.ref }}" type="hidden">
+       <a href="#" id="field_requested_time" class="editable when_time"
            data-pk="{{ object.ref }}"
            data-date="{{ object.requested_from|date:"Y-m-d" }}"
                 >{{ requested_time }}</a>
