fixes to get the clocks working.  Think I have it.  Copied only the clock stuff across to production so the sms part is just here and needs testing in case it cases problems.

--- a/templates/web/booking_editable_template.html
+++ b/templates/web/booking_editable_template.html
@@ -50,14 +50,14 @@
         {{ default_studio }}</a>
 
     for session beginning at
-    <input id="input_deadline_time" value="" data-pk="{{ object.ref }}" type="hidden">
+    <input id="input_deadline_time" value="{{ deadline_time }}" data-pk="{{ object.ref }}" type="hidden">
     {% if object.status < '2' %}
         <a href="#" id="field_deadline_time" class="editable-click when_time"
            data-pk="{{ object.ref }}"
            data-date="{{ object.deadline|date:"Y-m-d" }}"
                 >{{ deadline_time }}</a>
     {% else %}
-        <span id="field_deadline_time" >{ deadline_time }}</span>
+        <span id="field_deadline_time" >{{ deadline_time }}</span>
     {% endif %}
 
     with reference
@@ -68,7 +68,7 @@
         {{ default_client_ref }}</a>
 
     to start
-    <input id="input_requested_time" value="" data-pk="{{ object.ref }}" type="hidden">
+    <input id="input_requested_time" value="{{ requested_time }}" data-pk="{{ object.ref }}" type="hidden">
     <a href="#" id="field_requested_time" class="editable-click when_time"
        data-pk="{{ object.ref }}"
        data-date="{{ object.requested_from|date:"Y-m-d" }}"
