--- a/templates/web/booking_editable_template_booker.html
+++ b/templates/web/booking_editable_template_booker.html
@@ -36,14 +36,14 @@
             {{ default_studio }}</a>
 
         for session beginning at
-      <input id="input_deadline_time" value="" data-pk="{{ object.ref }}" type="hidden">
+      <input id="input_deadline_time" value="{{ deadline_time }}" data-pk="{{ object.ref }}" type="hidden">
       {% if object.status < '2' %}
             <a href="#" id="field_deadline_time" class="editable when_time"
                data-pk="{{ object.ref }}"
                data-date="{{ object.deadline|date:"Y-m-d" }}"
                     >{{ deadline_time }}</a>
         {% else %}
-            <span id="field_deadline_time" >{ deadline_time }}</span>
+            <span id="field_deadline_time" >{{ deadline_time }}</span>
         {% endif %}
 
 
@@ -56,7 +56,7 @@
 
 
         to start
-     <input id="input_requested_time" value="" data-pk="{{ object.ref }}" type="hidden">
+     <input id="input_requested_time" value="{{ requested_time }}" data-pk="{{ object.ref }}" type="hidden">
        <a href="#" id="field_requested_time" class="editable when_time"
            data-pk="{{ object.ref }}"
            data-date="{{ object.requested_from|date:"Y-m-d" }}"
